[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/nes_pixel_emulator_hud.tres" type="DynamicFont" id=2]

[node name="HUD" type="Node"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 252.0
margin_bottom = 236.0
size_flags_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 248.0
margin_bottom = 12.0

[node name="LevelLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 61.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "LEVEL: 01"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 147.0
margin_bottom = 12.0
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 151.0
margin_right = 248.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "SCORE: 000036"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 248.0
margin_bottom = 216.0
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 220.0
margin_right = 248.0
margin_bottom = 232.0
size_flags_horizontal = 3

[node name="HitpointsLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 79.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "HEALTH: 98%"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 83.0
margin_right = 181.0
margin_bottom = 12.0
size_flags_horizontal = 3

[node name="LivesLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 185.0
margin_right = 248.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "LIVES: 02"
